tests/transpiler/x/zig/string_contains.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:41 +0000
const std = @import("std");

pub fn main() void {
    const s = "catch";
    try std.io.getStdOut().writer().print("{any}\n", .{std.mem.indexOf(u8, s, "cat") != null});
    try std.io.getStdOut().writer().print("{any}\n", .{std.mem.indexOf(u8, s, "dog") != null});
}
